--- a/src/com/qlsv/view/MatKhauJPanel.form
+++ b/src/com/qlsv/view/MatKhauJPanel.form
@@ -85,7 +85,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u ph&#x1ea3;i c&#xf3; &#xed;t nh&#x1ea5;t 6 k&#xed; t&#x1ef1;: s&#x1ed1;, ch&#x1eef; c&#xe1;i, ch&#x1eef; hoa"/>
+            <Property name="text" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u ph&#x1ea3;i c&#xf3; &#xed;t nh&#x1ea5;t 8 k&#xed; t&#x1ef1;: s&#x1ed1;, ch&#x1eef; c&#xe1;i, ch&#x1eef; hoa"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="MatKhauMoiJLabel">
@@ -119,6 +119,9 @@
               <Connection code="new TextBubbleBorder(Color.MAGENTA.darker(), 1, 10, 0)" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
@@ -156,7 +159,6 @@
           <SubComponents>
             <Component class="javax.swing.JPasswordField" name="MatKhauCujPasswordField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jPasswordField1"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
                 </Property>
@@ -218,7 +220,6 @@
             </Component>
             <Component class="javax.swing.JPasswordField" name="MatKhauMoijPasswordField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jPasswordField1"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
                 </Property>
@@ -262,7 +263,6 @@
           <SubComponents>
             <Component class="javax.swing.JPasswordField" name="XacNhanjPasswordField">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jPasswordField1"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
                 </Property>
