--- a/src/com/qlsv/view/MainJFrame.form
+++ b/src/com/qlsv/view/MainJFrame.form
@@ -27,7 +27,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="jpnRoot" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jpnView" min="-2" max="-2" attributes="0"/>
+              <Component id="jpnView" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
